--- a/css/starter.css
+++ b/css/starter.css
@@ -198,7 +198,7 @@ div[id*="radio"] {
     margin-bottom: 5px !important;
     text-transform: uppercase;
     font-weight: bold;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
 
@@ -217,7 +217,6 @@ div[id*="radio"] {
   .error-block {
     width: 300px;
     border: thin solid var(--tool-blue);
-    border-radius: 5px;
     margin-left: 15px;
     text-align: center;
     padding: 2px 5px 2px 5px;
