--- a/css/starter.css
+++ b/css/starter.css
@@ -209,7 +209,7 @@ div[id*="radio"] {
 
 
   .messages .errors{
-    background-color:#E48E66;
+    background-color:rgba(228, 143, 103, 0.75);
     color: #a94442;
     border-color:#ebccd1;
     border-radius: 5px;
