--- a/css/starter.css
+++ b/css/starter.css
@@ -8,8 +8,14 @@ body {
   font-size: 14px;
   font-family: monospace;
   color: var(--main-color);
+  overflow: auto;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
   margin: 2em auto;
-  width: 370px;
+  width: 320px;
 }
 
 .infosite_tool_layout {
@@ -28,8 +34,6 @@ h6 {
   text-align: center;
   margin: 0.5em 0;
 }
-
-.flex-container {display: flex;}
 
 form {
   display: inline-block;
@@ -187,9 +191,8 @@ div[id*="radio"] {
 .hlayout {
   display: flex;
   flex-direction: column;
-  border: 1px solid white;
   text-align: center;
-  margin-top: 1em;
+  margin: 1em auto;
 }
 
   .messages-header, 
@@ -208,7 +211,7 @@ div[id*="radio"] {
     margin-left: 15px;
     text-align: center;
     padding: 2px 5px 2px 5px;
-    margin-bottom: 5px !important;
+    margin-bottom: 5px;
     text-transform: uppercase;
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;   
@@ -222,7 +225,7 @@ div[id*="radio"] {
     font-size:13px;
     padding:5px;
     word-wrap:break-word;
-    margin-bottom: 5px !important;
+    margin-bottom: 5px;
   }
   
   .error-block {
@@ -238,10 +241,29 @@ div[id*="radio"] {
     margin: 0 0 10px  
   }
 
+  #jsonOutput {
+    text-wrap: wrap;
+    overflow-wrap: anywhere;
+    word-break: break-word;
+  }
+
 @media screen and (max-width: 500px) {
+  .flex-container {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+  }
   .infosite_tool_layout {
     font-size: 75%;
-    max-width: 390px;
     padding: 0 1em;
+  }
+}
+
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+  .flex-container {
+    width: auto;
   }
 }
